fix:unable to create bean exception