@@ -8,13 +8,13 @@ import com.rentalsphere.backend.User.Model.User;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.crypto.password.PasswordEncoder;
 
-import java.util.List;
-
+import java.util.Arrays;
 @Configuration
 public class LoadUser {
     @Bean
-    CommandLineRunner initDatabase(UserRepository userRepository, RoleRepository roleRepository){
+    CommandLineRunner initDatabase(UserRepository userRepository, RoleRepository roleRepository, PasswordEncoder passwordEncoder){
         return args -> {
             Role adminRole = new Role();
             adminRole.setName(Roles.ADMIN);
@@ -24,15 +24,15 @@ public class LoadUser {
             tenantRole.setName(Roles.TENANT);
             Role propertyManagerRole = new Role();
             propertyManagerRole.setName(Roles.PROPERTY_MANAGER);
-            roleRepository.saveAll(List.of(adminRole, userRole, tenantRole, propertyManagerRole));
+            roleRepository.saveAll(Arrays.asList(adminRole, userRole, tenantRole, propertyManagerRole));
             User admin = new User();
             admin.setFirstName("admin");
             admin.setLastName("admin");
             admin.setEmail("admin@gmail.com");
-            admin.setPassword("admin");
-            admin.setRoles(List.of(adminRole));
+            admin.setPassword(passwordEncoder.encode("Admin@12345"));
+            admin.setRoles(Arrays.asList(adminRole));
 
-            if(userRepository.findByEmail(admin.getEmail()).isEmpty()){
+            if(!userRepository.findByEmail(admin.getEmail()).isPresent()){
                 userRepository.save(admin);
             }
         };
